--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,9 @@
     }
   </style>
 <![endif]-->
+{% if site.tags != "" %}
+  {% include collecttags.html %}
+{% endif %}
 
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
