Edited archive, base and page.css to narrow down the line space

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -40,6 +40,7 @@
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
+    margin-bottom: 0.5em;
   }
 }
 
@@ -73,7 +74,6 @@
 }
 
 .archive__item-excerpt {
-  margin-top: 0;
   font-size: $type-size-6;
 
   & + p {
