--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -41,7 +41,7 @@
   }
 
   > * {
-    margin-top: 1em;
+    margin-top: 4em;
     margin-bottom: 1em;
   }
 
@@ -61,9 +61,17 @@
     line-height: 1.5;
   }
 
+  nav ul li{
+    margin-bottom: 0.5em;
+  }
+
+  nav li ul, nav li ol{
+    margin-block-end:1em;
+  }
+
   img {
     width: 100%;
-    
+
     &.emoji {
       width: 20px;
       height: 20px;
@@ -315,4 +323,3 @@
     margin-right: initial;
   }
 }
-
