Fix font size and image size for better ui

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -195,7 +195,8 @@
     }
 
     &.site-title {
-      margin-left: 0;
+      margin-left: 1;
+      font-size: 22px;
     }
   }
 
@@ -221,28 +222,23 @@
     display: none;
     position: absolute;
     background-color: darken($background-color, 3%);
-    min-width: 160px;
+    // min-width: 160px;
     box-shadow: $box-shadow;
     z-index: 1;
     box-sizing: border-box;
   }
 
-  .dropdown-content a {
-    // padding: 4px 8px;
-  }
-
   .dropdown:hover .dropdown-content {
     display: block;
-    font-size: 17px;
-  }
-
-  .dropdown-content a:not(:last-child) {
-    border-bottom: none;
+    // font-size: 17px;
   }
 
   .dropdown-item {
     padding: 10px;
+    font-size: 15px;
   }
+
+
 
 
   .visible-links {
@@ -355,13 +351,6 @@
     }
 
 
-    .dropdown {
-      width: auto;
-    }
-
-    .dropdown-item {
-      padding: 10px;
-    }
   }//hidden link
 } //greedy-nav
 
