--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -27,7 +27,7 @@
     justify-content: space-between;
     font-family: $sans-serif-narrow;
     /* devinlife : 메뉴바 텍스트 설정 */
-    font-size: $type-size-5;
+    font-size: medium;
     // font-weight: bold;
 
     @include breakpoint($x-large) {
@@ -64,8 +64,8 @@
 }
 
 .masthead__menu {
-  padding-top: 0.8rem;
-  padding-bottom: 0.8rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   float: left;
   margin-left: 0;
   margin-right: 0;
