--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -41,7 +41,7 @@
   }
 
   > * {
-    margin-top: 4em;
+    margin-top: 1em;
     margin-bottom: 1em;
   }
 
@@ -135,7 +135,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 80%;
     border-radius: 50%;
 
     @include breakpoint($large) {
