--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -174,7 +174,7 @@ body {
   &--overlay {
     position: relative;
     // margin-bottom: 2em;
-    padding: 3em 0;
+    padding: 3em 0em 1em 0em;
     @include clearfix;
     background-size: cover;
     background-repeat: no-repeat;
