--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -35,28 +35,28 @@ h6 {
 
 h1 {
   margin-top: 0;
-  font-size: $type-size-3;
+  font-size: 2em;
 }
 
 h2 {
   margin: 0.5em 0 0.5em;
-  font-size: $type-size-4;
+  font-size: 1.5em;
 }
 
 h3 {
-  font-size: $type-size-5;
+  font-size: 1.17em;
 }
 
 h4 {
-  font-size: $type-size-6;
+  font-size: 1em;
 }
 
 h5 {
-  font-size: $type-size-6;
+  font-size: 0.83em;
 }
 
 h6 {
-  font-size: $type-size-6;
+  font-size: 0.67em;
 }
 
 small,
