Add google search console tag

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,13 @@
 layout: archive
 ---
 
+
+<html>
+  <head>
+    <meta name="google-site-verification" content="xAUeIt95gyVt5GeBZzONF5lFcO4QCaFKTioGEuUiBQE" />
+  </head>
+
+
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
@@ -11,3 +18,4 @@ layout: archive
 {% endfor %}
 
 {% include paginator.html %}
+</html>
