--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,7 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 //@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Actor&family=Overpass&display=swap');
