--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,35 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Actor&family=Overpass&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
+
+@import url('https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css');
+
+
+.site-title {
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.archive__item-title{
+  font-size: 1.4em;
+}
+
+.archive__item a[rel="permalink"]{
+  color: mix(#fff, #666d72, 7%);
+}
+
+.archive__item {
+  a:hover{
+    color: #79b7cc;
+  }
+
+  a:visited{
+    color: mix(#fff, #666d72, 15%);
+  }
+}
+
+.archive__subtitle{
+  padding-bottom: 1em;
+  color: #5f85b9;
+}
