--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -49,13 +49,14 @@
 }
 
 .site-title {
-  
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-item-align: center;
   align-self: center;
   font-weight: bold;
+  text-transform: uppercase;
   z-index: 20;
 }
 
@@ -65,8 +66,8 @@
 }
 
 .masthead__menu {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
   float: left;
   margin-left: 0;
   margin-right: 0;
