--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -40,6 +40,12 @@
 			{{ content }}
 		</div>
 
+		{% if site.search == true %}
+      <div class="search-content">
+        {% include_cached search/search_form.html %}
+      </div>
+    {% endif %}
+
 
 	<!-- footer section -->
 	<div id="footer" class="page__footer">
