Edit style to optimise the blockquote spacing

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -155,12 +155,12 @@ blockquote {
 	position: relative;
 
 	.quote {
-		padding: 30px 55px;
+		padding: 30px;
 		max-width: 510px;
 		margin: 0 auto;
 		border-radius: 3px;
 		position: relative;
-		line-height: 1.6em;
+		line-height: 1.7em;
 		font-size: 0.9em;
 		text-align: center;
 		box-shadow: 0 20px 100px 0 rgba(0,0,0,0.1);
