--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -74,13 +74,18 @@ layout: default
 
       {% if page.share %}{% include social-share.html %}{% endif %}
 
+      {% include comments.html %}
+
       {% include post_pagination.html %}
     </div>
+
+
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
       {% include comments.html %}
     {% endif %}
   </article>
+
 
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
