--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  padding: $masthead-height;
+  padding: 0;
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.45;
