--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -5,11 +5,8 @@
 .page__footer {
   @include clearfix;
   float: left;
-  margin-left: 0;
-  margin-right: 0;
   width: 100%;
   clear: both;
-  margin-top: 0.1em;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -21,9 +18,8 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
     max-width: 100%;
-    padding: 0 1em 2em;
+    padding: 1.5em 1.5em;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
