--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -22,6 +22,9 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
+		
+		<!-- google search console -->
+		<meta name="google-site-verification" content="xAUeIt95gyVt5GeBZzONF5lFcO4QCaFKTioGEuUiBQE" />
 	</head>
 
 
