Variablise font size to utilise  universal change

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -181,7 +181,7 @@ figcaption > code,
 td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
-  font-size: 0.8em;
+  font-size:  $type-size-body;
   background: $code-background-color;
   border-radius: $border-radius;
 
