Center align images as default

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -346,6 +346,12 @@ nav {
    Global animation transition
    ========================================================================== */
 
+// center image
+img{
+  margin: 0 auto;
+  display: block;
+}
+
 b,
 i,
 strong,
