--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -171,7 +171,8 @@ pre {
 }
 
 pre {
-  overflow-x: auto; /* add scrollbars to wide code blocks*/
+  white-space: pre-wrap; // this wraps the code
+  // overflow-x: auto; // add scrollbars to wide code blocks
 }
 
 p > code,
