--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -62,74 +62,285 @@ figure.highlight {
   }
 }
 
-.highlight .hll { background-color: #ffffcc }
-.highlight .err { color: #F00000; background-color: #F0A0A0 } /* Error */
-.highlight .o { color: #303030 } /* Operator */
+.highlight table td { padding: 5px; }
+.highlight table pre { margin: 0; }
+.highlight .cm {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .cp {
+  color: #999999;
+  font-weight: bold;
+}
+.highlight .c1 {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .cs {
+  color: #999999;
+  font-weight: bold;
+  font-style: italic;
+}
+.highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf {
+  color: #999988;
+  font-style: italic;
+}
+.highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd;
+}
+.highlight .ge {
+  color: #000000;
+  font-style: italic;
+}
+.highlight .gr {
+  color: #aa0000;
+}
+.highlight .gh {
+  color: #999999;
+}
+.highlight .gi {
+  color: #000000;
+  background-color: #ddffdd;
+}
+.highlight .go {
+  color: #888888;
+}
+.highlight .gp {
+  color: #555555;
+}
+.highlight .gs {
+  font-weight: bold;
+}
+.highlight .gu {
+  color: #aaaaaa;
+}
+.highlight .gt {
+  color: #aa0000;
+}
+.highlight .kc {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kd {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kn {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kp {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kr {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .kt {
+  color: #445588;
+  font-weight: bold;
+}
+.highlight .k, .highlight .kv {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .mf {
+  color: #009999;
+}
+.highlight .mh {
+  color: #009999;
+}
+.highlight .il {
+  color: #009999;
+}
+.highlight .mi {
+  color: #009999;
+}
+.highlight .mo {
+  color: #009999;
+}
+.highlight .m, .highlight .mb, .highlight .mx {
+  color: #009999;
+}
+.highlight .sb {
+  color: #d14;
+}
+.highlight .sc {
+  color: #d14;
+}
+.highlight .sd {
+  color: #d14;
+}
+.highlight .s2 {
+  color: #d14;
+}
+.highlight .se {
+  color: #d14;
+}
+.highlight .sh {
+  color: #d14;
+}
+.highlight .si {
+  color: #d14;
+}
+.highlight .sx {
+  color: #d14;
+}
+.highlight .sr {
+  color: #009926;
+}
+.highlight .s1 {
+  color: #d14;
+}
+.highlight .ss {
+  color: #990073;
+}
+.highlight .s, .highlight .sa, .highlight .dl {
+  color: #d14;
+}
+.highlight .na {
+  color: #008080;
+}
+.highlight .bp {
+  color: #999999;
+}
+.highlight .nb {
+  color: #0086B3;
+}
+.highlight .nc {
+  color: #445588;
+  font-weight: bold;
+}
+.highlight .no {
+  color: #008080;
+}
+.highlight .nd {
+  color: #3c5d5d;
+  font-weight: bold;
+}
+.highlight .ni {
+  color: #800080;
+}
+.highlight .ne {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nf, .highlight .fm {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nl {
+  color: #990000;
+  font-weight: bold;
+}
+.highlight .nn {
+  color: #555555;
+}
+.highlight .nt {
+  color: #000080;
+}
+.highlight .vc {
+  color: #008080;
+}
+.highlight .vg {
+  color: #008080;
+}
+.highlight .vi {
+  color: #008080;
+}
+.highlight .nv, .highlight .vm {
+  color: #008080;
+}
+.highlight .ow {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .o {
+  color: #000000;
+  font-weight: bold;
+}
+.highlight .w {
+  color: #bbbbbb;
+}
+.highlight {
+  background-color: #f8f8f8;
+}
 
 
-.highlight .c { color: #808080 } /* Comment */
-.highlight .cm { color: #808080 } /* Comment.Multiline */
-.highlight .cp { color: #507090 } /* Comment.Preproc */
-.highlight .c1 { color: #808080 } /* Comment.Single */
-.highlight .cs { color: #cc0000; font-weight: bold } /* Comment.Special */
-
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d01040 } /* Literal.String */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d01040 } /* Literal.String.Backtick */
-.highlight .sc { color: #d01040 } /* Literal.String.Char */
-.highlight .sd { color: #d01040 } /* Literal.String.Doc */
-.highlight .s2 { color: #d01040 } /* Literal.String.Double */
-.highlight .se { color: #d01040 } /* Literal.String.Escape */
-.highlight .sh { color: #d01040 } /* Literal.String.Heredoc */
-.highlight .si { color: #d01040 } /* Literal.String.Interpol */
-.highlight .sx { color: #d01040 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d01040 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+// .highlight .hll { background-color: #ffffcc }
+// .highlight .err { color: #f00b0b } /* Error */
+// .highlight .o { color: #303030 } /* Operator */
 
 
-.highlight .gd { color: #A00000 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #808080 } /* Generic.Output */
-.highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #0040D0 } /* Generic.Traceback */
+// .highlight .c { color: #808080 } /* Comment */
+// .highlight .cm { color: #808080 } /* Comment.Multiline */
+// .highlight .cp { color: #507090 } /* Comment.Preproc */
+// .highlight .c1 { color: #808080 } /* Comment.Single */
+// .highlight .cs { color: #cc0000 } /* Comment.Special */
 
-.highlight .k { color: #006699; font-weight: bold } /* Keyword */
-.highlight .kc { color: #006699; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #006699; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #006699; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #006699 } /* Keyword.Pseudo */
-.highlight .kr { color: #006699; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #007788; font-weight: bold } /* Keyword.Type */
+// .highlight .m { color: #009999 } /* Literal.Number */
+// .highlight .s { color: #d01040 } /* Literal.String */
+// .highlight .mf { color: #009999 } /* Literal.Number.Float */
+// .highlight .mh { color: #009999 } /* Literal.Number.Hex */
+// .highlight .mi { color: #009999 } /* Literal.Number.Integer */
+// .highlight .mo { color: #009999 } /* Literal.Number.Oct */
+// .highlight .sb { color: #d01040 } /* Literal.String.Backtick */
+// .highlight .sc { color: #d01040 } /* Literal.String.Char */
+// .highlight .sd { color: #d01040 } /* Literal.String.Doc */
+// .highlight .s2 { color: #d01040 } /* Literal.String.Double */
+// .highlight .se { color: #d01040 } /* Literal.String.Escape */
+// .highlight .sh { color: #d01040 } /* Literal.String.Heredoc */
+// .highlight .si { color: #d01040 } /* Literal.String.Interpol */
+// .highlight .sx { color: #d01040 } /* Literal.String.Other */
+// .highlight .sr { color: #009926 } /* Literal.String.Regex */
+// .highlight .s1 { color: #d01040 } /* Literal.String.Single */
+// .highlight .ss { color: #990073 } /* Literal.String.Symbol */
+// .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
-.highlight .na { color: #0000C0 } /* Name.Attribute */
-.highlight .nb { color: #007020 } /* Name.Builtin */
-.highlight .nc { color: #B00060; font-weight: bold } /* Name.Class */
-.highlight .no { color: #003060; font-weight: bold } /* Name.Constant */
-.highlight .nd { color: #505050; font-weight: bold } /* Name.Decorator */
-.highlight .ni { color: #800000; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #F00000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #CC00FF } /* Name.Function */
 
-.highlight .nl { color: #907000; font-weight: bold } /* Name.Label */
-.highlight .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #007000 } /* Name.Tag */
-.highlight .nv { color: #906030 } /* Name.Variable */
-.highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #306090 } /* Name.Variable.Class */
-.highlight .vg { color: #d07000; font-weight: bold } /* Name.Variable.Global */
-.highlight .vi { color: #3030B0 } /* Name.Variable.Instance */
+// .highlight .gd { color: #A00000 } /* Generic.Deleted */
+// .highlight .ge { font-style: italic } /* Generic.Emph */
+// .highlight .gr { color: #FF0000 } /* Generic.Error */
+// .highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+// .highlight .gi { color: #00A000 } /* Generic.Inserted */
+// .highlight .go { color: #808080 } /* Generic.Output */
+// .highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+// .highlight .gs { font-weight: bold } /* Generic.Strong */
+// .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+// .highlight .gt { color: #0040D0 } /* Generic.Traceback */
 
-.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+// .highlight .k { color: #006699; font-weight: bold } /* Keyword */
+// .highlight .kc { color: #006699; font-weight: bold } /* Keyword.Constant */
+// .highlight .kd { color: #006699; font-weight: bold } /* Keyword.Declaration */
+// .highlight .kn { color: #006699; font-weight: bold } /* Keyword.Namespace */
+// .highlight .kp { color: #006699 } /* Keyword.Pseudo */
+// .highlight .kr { color: #006699; font-weight: bold } /* Keyword.Reserved */
+// .highlight .kt { color: #007788; font-weight: bold } /* Keyword.Type */
+
+// .highlight .na { color: #0000C0 } /* Name.Attribute */
+// .highlight .nb { color: #007020 } /* Name.Builtin */
+// .highlight .nc { color: #B00060; font-weight: bold } /* Name.Class */
+// .highlight .no { color: #003060; font-weight: bold } /* Name.Constant */
+// .highlight .nd { color: #505050; font-weight: bold } /* Name.Decorator */
+// .highlight .ni { color: #800000; font-weight: bold } /* Name.Entity */
+// .highlight .ne { color: #F00000; font-weight: bold } /* Name.Exception */
+// .highlight .nf { color: #CC00FF } /* Name.Function */
+
+// .highlight .nl { color: #907000 } /* Name.Label */
+// .highlight .nn { color: #0e84b5 } /* Name.Namespace */
+// .highlight .nt { color: #007000 } /* Name.Tag */
+// .highlight .nv { color: #906030 } /* Name.Variable */
+// .highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
+// .highlight .vc { color: #306090 } /* Name.Variable.Class */
+// .highlight .vg { color: #d07000 } /* Name.Variable.Global */
+// .highlight .vi { color: #3030B0 } /* Name.Variable.Instance */
+
+// .highlight .ow { color: #000000 } /* Operator.Word */
+// .highlight .w { color: #bbbbbb } /* Text.Whitespace */
 
