--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,15 +6,16 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-//@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
 
 
-
+//  import fonts
 @import url('https://fonts.googleapis.com/css2?family=Actor&family=Overpass&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
 
 @import url('https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css');
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 
 .site-title {
