Change li > code's syntax highlighting

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -183,6 +183,7 @@ td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size:  $type-size-body;
+  color: #f0555a;
   background: $code-background-color;
   border-radius: $border-radius;
 
