--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% if post.id %}
-  {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" %}
+  {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" | truncate: 60 %}
 {% else %}
   {% assign title = post.title %}
 {% endif %}
