--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -95,6 +95,7 @@ nav .button {
 	@media #{$desktop} {
 		display: flex;
 	}
+
 	margin: 35px -15px 0 -15px;
 	padding: 0;
 	list-style: none;
@@ -102,7 +103,7 @@ nav .button {
 
 	li {
 		box-sizing: border-box;
-		margin: 70px 0px;
+		margin: 30px 0px;
 		// width: 100%;
 		border: 1px solid #dfdfdf;
 		border-radius: 3px;
@@ -119,7 +120,6 @@ nav .button {
 				font-family: 'Lato', sans-serif;
 				color: #5a5a5a;
 			}
-
 		}
 
 
@@ -142,8 +142,6 @@ nav .button {
 			fill: $brand-color;
 			padding: 5px;
 		}
-
-
 	}
 }
 
@@ -223,10 +221,17 @@ blockquote {
 }
 
 .posts {
-	@media #{$desktop} {
-		display: flex;
+	display: table;
+
+	.grid__item .archive__item-title{
+		text-align: left;
 	}
-	margin: 0 -20px;
+
+	@media #{$desktop} {
+		// display: table;
+	}
+
+
 	.post {
 		flex: 1;
 		border: 1px solid #eee;
