--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,5 +1,26 @@
 
 
+// separate css for second container
+.container2 {
+	max-width: 1000px;
+	width: 100%;
+	margin: 0 auto;
+	position: relative;
+	padding: 50px 30px 0px 30px;
+	box-sizing: border-box;
+
+	h2{
+		font-size:1.2em;
+		font-family: 'Fira Mono', monospace;
+		word-spacing: -3px;
+		letter-spacing: -1px;
+	}
+
+	blockquote {
+		border-left: 0.01em solid #ffffff;
+	}
+}
+
 .container {
 	max-width: 1000px;
 	width: 100%;
@@ -39,7 +60,7 @@ header {
 
 			img {
 				max-width: none;
-				width: 120%;
+				width: 110%;
 			}
 
 			&:first-child {
@@ -96,7 +117,7 @@ nav .button {
 		display: flex;
 	}
 
-	margin: 35px -15px 0 -15px;
+	margin: 30px 0px ;
 	padding: 0;
 	list-style: none;
 
