Incorporate Google Analytics for the site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         {% include_cached footer.html %}
       </footer>
     </div>
-
+    {% include analytics.html %}
     {% include scripts.html %}
 
   </body>
