Implement new animated terminal for index page

--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -8,6 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		{% seo %}
+		<!-- terminal -->
+		<link rel="stylesheet" href="{{ site.baseurl }}/termynal.css">
+
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/sitelogo.png" sizes="32x32">
@@ -22,7 +25,7 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
-		
+
 		<!-- google search console -->
 		<meta name="google-site-verification" content="xAUeIt95gyVt5GeBZzONF5lFcO4QCaFKTioGEuUiBQE" />
 	</head>
