--- a/termynal.css
+++ b/termynal.css
@@ -10,6 +10,8 @@
       --color-bg: #f4f4f4;
       --color-text: #1a1e24;
       --color-text-subtle: #D76D77;
+      width: 650px;
+
 }
 
 :root {
@@ -19,8 +21,8 @@
 }
 
 [data-termynal] {
-    width: 750px;
-    max-width: 65%;
+    width: 650px !important;
+    max-width: 100%;
     margin: 0 auto;
     background: var(--color-bg);
     color: var(--color-text);
@@ -42,23 +44,23 @@
 [data-termynal]:before {
     content: '';
     position: absolute;
-    top: 15px;
-    left: 15px;
+    top: 7px;
+    left: 7px;
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 13px;
+    height: 13px;
     border-radius: 50%;
-    /* A little hack to display the window buttons in one pseudo element. */
     background: #d9515d;
+    /* A little hack to display the window buttons in one pseudo element. */
     -webkit-box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
-            box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+    box-shadow: 20px 0 0 #f4c025, 40px 0 0 #3ec930;
 }
 
 [data-termynal]:after {
-    content: 'chaerim-kim.github.io';
+    content: 'chaerim-kim';
     position: absolute;
     color: var(--color-text-subtle);
-    top: 5px;
+    top: 4px;
     left: 0;
     width: 100%;
     text-align: center;
