--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -9,7 +9,7 @@
 
 		{% seo %}
 		<!-- terminal -->
-		<link rel="stylesheet" href="{{ site.baseurl }}/termynal.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/terminal.css">
 
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">
