--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -25,8 +25,15 @@ header {
 	margin: 0;
 	color: #333;
 	min-width: 380px;
-
 	padding-bottom: 50px;
+
+	// when its mobile
+		img {
+			margin: 80px auto 0 auto;
+			display: block;
+			max-width: 70%;
+		}
+
 
 	@media #{$desktop} {
 		.container {
@@ -37,8 +44,9 @@ header {
 			flex: 1;
 
 			img {
+				margin: 100px auto 0 auto;
 				max-width: none;
-				width: 110%;
+				width: 100%;
 			}
 
 			&:first-child {
@@ -50,11 +58,6 @@ header {
 		}
 	}
 
-	img {
-		margin: 100px auto 0 auto;
-		display: block;
-		max-width: 100%;
-	}
 
 	h1 {
 		font-family: 'Fira Mono', monospace;
